chore: model cards

--- a/src/notebooks/model_cards/svm_model_card.ipynb
+++ b/src/notebooks/model_cards/svm_model_card.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,7 +84,7 @@
         "      - gamma: scale\n",
         "      - seed: 42''',\n",
         "    speeds_sizes_times = '''\n",
-        "      - overall training time: 3 hours\n",
+        "      - overall training time: 20 minutes (M2 Macbook Pro)\n",
         "      - model size: 500MB''',\n",
         "    testing_data = 'The entire development dataset provided, amounting to 6K pairs.',\n",
         "    testing_metrics = '''\n",
