--- a/src/notebooks/svm/demo_svm.ipynb
+++ b/src/notebooks/svm/demo_svm.ipynb
@@ -9,20 +9,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: nltk in c:\\python311\\lib\\site-packages (3.9.1)\n",
-      "Requirement already satisfied: click in c:\\tools\\manim\\lib\\site-packages (from nltk) (8.1.7)\n",
-      "Requirement already satisfied: joblib in c:\\python311\\lib\\site-packages (from nltk) (1.4.2)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in c:\\python311\\lib\\site-packages (from nltk) (2024.11.6)\n",
-      "Requirement already satisfied: tqdm in c:\\tools\\manim\\lib\\site-packages (from nltk) (4.66.1)\n",
-      "Requirement already satisfied: colorama in c:\\tools\\manim\\lib\\site-packages (from click->nltk) (0.4.6)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~animgl (C:\\Python311\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~animgl (C:\\Python311\\Lib\\site-packages)\n"
+      "Collecting nltk\n",
+      "  Downloading nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting click (from nltk)\n",
+      "  Downloading click-8.1.8-py3-none-any.whl.metadata (2.3 kB)\n",
+      "Requirement already satisfied: joblib in /opt/homebrew/lib/python3.11/site-packages (from nltk) (1.3.1)\n",
+      "Collecting regex>=2021.8.3 (from nltk)\n",
+      "  Downloading regex-2024.11.6-cp311-cp311-macosx_11_0_arm64.whl.metadata (40 kB)\n",
+      "Requirement already satisfied: tqdm in /opt/homebrew/lib/python3.11/site-packages (from nltk) (4.66.1)\n",
+      "Downloading nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m17.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading regex-2024.11.6-cp311-cp311-macosx_11_0_arm64.whl (284 kB)\n",
+      "Downloading click-8.1.8-py3-none-any.whl (98 kB)\n",
+      "Installing collected packages: regex, click, nltk\n",
+      "Successfully installed click-8.1.8 nltk-3.9.1 regex-2024.11.6\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
@@ -32,49 +35,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
-    "import pickle\n",
+    "import cloudpickle\n",
     "import string\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import sys\n",
     "from pathlib import Path\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from collections import Counter\n",
-    "from typing import Tuple, Set, Optional"
+    "from typing import Tuple, Set, Optional\n",
+    "\n",
+    "# PLEAE CHANGE TO PROJECT ROOT OTHERWISE THE PICKLE WILL NOT WORK\n",
+    "project_root = \"<ABSOLUTE PATH TO PROJECT ROOT>/comp34812\"\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.append(project_root)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name '__file__' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mBaseConfig\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mDATA_DIR\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[34;43m__file__\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mTRAIN_FILE\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtrain.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mBaseConfig\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mBaseConfig\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     DATA_DIR = Path(\u001b[34;43m__file__\u001b[39;49m) / \u001b[33m\"\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m     TRAIN_FILE = Path(\u001b[33m\"\u001b[39m\u001b[33mtrain.csv\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m     DEV_FILE = Path(\u001b[33m\"\u001b[39m\u001b[33mdev.csv\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name '__file__' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BaseConfig:\n",
-    "    DATA_DIR = Path(__file__) / \"data\"\n",
-    "    TRAIN_FILE = Path(\"train.csv\")\n",
-    "    DEV_FILE = Path(\"dev.csv\")\n",
-    "    TEST_FILE = Path(\"test.csv\")\n",
-    "    AUG_TRAIN_FILE = Path(\"train_augmented.csv\")\n",
-    "    SAVE_DIR = Path(__file__) / \"data\" / \"results\"\n",
-    "    CACHE_DIR = Path(__file__) / \"cache\"\n",
+    "    DATA_DIR = Path(\"Path to data directory\") # comp34812/data\n",
+    "    TRAIN_FILE = Path(\"Path to train file\") # train.csv\n",
+    "    DEV_FILE = Path(\"Path to dev file\") # dev.csv\n",
+    "    TEST_FILE = Path(\"Path to test file\") # test.csv\n",
+    "    AUG_TRAIN_FILE = Path(\"Path to augmented train file\") # train_augmented.csv\n",
+    "    SAVE_DIR = Path(\"Path to save directory\") # comp34812/data/results\n",
+    "    CACHE_DIR = Path(\"Path to cache directory\") # comp34812/cache\n",
     "\n",
     "    # Augmentation config\n",
     "    AUGMENTATION_CONFIG = {\n",
@@ -179,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,14 +282,17 @@
     "                    \" [SEP] \" + \"Evidence: \" + data['Evidence'].apply(clean_text).apply(replace_rare_words))\n",
     "\n",
     "    # Extract labels\n",
-    "    labels = data['label'].values\n",
+    "    if 'label' in data.columns:\n",
+    "        labels = data['label'].values\n",
+    "    else:\n",
+    "        labels = [None] * len(data)\n",
     "\n",
     "    return data, labels, vocab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +328,7 @@
     "    try:\n",
     "        # --- Load Pipeline --- \n",
     "        with open(pipeline_path, \"rb\") as f:\n",
-    "            loaded_pipeline = pickle.load(f)\n",
+    "            loaded_pipeline = cloudpickle.load(f)\n",
     "        logger.info(f\"Pipeline loaded successfully from {pipeline_path}\")\n",
     "\n",
     "        # --- Load and Prepare Input Data ---\n",
@@ -379,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_pickle_path = \"\"\n",
+    "pipeline_pickle_path = Path(\"/Users/harvey/School/Year 3/NLU/comp34812/data/results/svm/svm_pipeline.pkl\")\n",
     "\n",
     "try:\n",
-    "    prediction_input_file = config.DEV_FILE\n",
+    "    prediction_input_file = config.TEST_FILE\n",
     "    prediction_output_file = config.DATA_DIR / \"svm_predictions.csv\"\n",
     "    \n",
     "    # Ensure the predictions directory exists\n",
@@ -418,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
