chore: sort file paths in demo file

--- a/src/notebooks/svm/demo_svm.ipynb
+++ b/src/notebooks/svm/demo_svm.ipynb
@@ -378,11 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_pickle_path = Path(\"/Users/harvey/School/Year 3/NLU/comp34812/data/results/svm/svm_pipeline.pkl\")\n",
+    "pipeline_pickle_path = Path(\"Path to pipeline pickle file\")\n",
     "\n",
     "try:\n",
     "    prediction_input_file = config.TEST_FILE\n",
