fix: model cards

--- a/src/notebooks/model_cards/deberta_model_card.ipynb
+++ b/src/notebooks/model_cards/deberta_model_card.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,9 +87,9 @@
         "      - seed: 42\n",
         "      - num_epochs: 8 (early stopping enabled)''',\n",
         "    speeds_sizes_times = '''\n",
-        "      - overall training time (early stopping occurred): 1.5 hours\n",
-        "      - duration per training epoch: 30 minutes\n",
-        "      - model size: 4GB''',\n",
+        "      - overall training time (early stopping occurred): 1 hours\n",
+        "      - duration per training epoch: 10 minutes\n",
+        "      - model size: 1.4GB zipped''',\n",
         "    testing_data = 'The entire development dataset provided, amounting to 6K pairs.',\n",
         "    testing_metrics = '''\n",
         "      - Weighted Precision\n",
@@ -123,7 +123,7 @@
         ")\n",
         "\n",
         "\n",
-        "with open('deberta_model_card.md', 'w') as model_card:\n",
+        "with open('category_C_deberta_model_card.md', 'w') as model_card:\n",
         "  model_card.write(card.content)"
       ]
     }
