--- a/src/notebooks/model_cards/svm_model_card.ipynb
+++ b/src/notebooks/model_cards/svm_model_card.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 6,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,7 +84,7 @@
         "      - gamma: scale\n",
         "      - seed: 42''',\n",
         "    speeds_sizes_times = '''\n",
-        "      - overall training time: 20 minutes (M2 Macbook Pro)\n",
+        "      - overall training time: 8 minutes (M2 Macbook Pro)\n",
         "      - model size: 500MB''',\n",
         "    testing_data = 'The entire development dataset provided, amounting to 6K pairs.',\n",
         "    testing_metrics = '''\n",
@@ -115,7 +115,7 @@
         ")\n",
         "\n",
         "\n",
-        "with open('svm_model_card.md', 'w') as model_card:\n",
+        "with open('category_A_svm_model_card.md', 'w') as model_card:\n",
         "  model_card.write(card.content)"
       ]
     }
