--- a/src/notebooks/deberta/deberta.ipynb
+++ b/src/notebooks/deberta/deberta.ipynb
@@ -134,10 +134,14 @@
     "# Optuna parameters\n",
     "N_TRIALS = 10\n",
     "\n",
+    "BATCH_SIZES = [8, 16, 32, 64]\n",
+    "LEARNING_RATES = [1e-5, 2e-5, 3e-5, 4e-5, 5e-5]\n",
     "WEIGHT_DECAYS = [0.001, 0.1]\n",
     "WARMUP_RATIOS = [0.05, 0.15]\n",
-    "DROPOUT_RATES = [0.05]\n",
-    "FF_DROPOUT_RATES = [0.05]"
+    "DROPOUT_RATES = [0.05, 0.2]\n",
+    "FF_DROPOUT_RATES = [0.05, 0.2]\n",
+    "RANK = [8, 16, 32, 64]\n",
+    "ALPHA = [16, 32, 64, 128]"
    ]
   },
   {
