chore: change readme to use uv

--- a/src/notebooks/deberta/demo_deberta.ipynb
+++ b/src/notebooks/deberta/demo_deberta.ipynb
@@ -94,7 +94,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Path constants"
+    "### Path constants\n",
+    "\n",
+    "Make sure all the path names point to the relevant locations"
    ]
   },
   {
